<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <ToggleButton
        android:id="@+id/randomness_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/specific_text"
        android:checked="true"
        android:textOn="@string/random_text"
        app:layout_constraintBottom_toTopOf="@id/enter_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/id_text"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/quantity_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomness_button" />


    <ToggleButton
        android:id="@+id/quantity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/multiple_text"
        android:checked="true"
        android:textOn="@string/single_text"
        app:layout_constraintBottom_toTopOf="@id/enter_amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_id" />

    <EditText
        android:id="@+id/enter_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount_text"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/name_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_button" />

    <ToggleButton
        android:id="@+id/name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/other_text"
        android:checked="true"
        android:textOn="@string/chuck_norris_text"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_button" />

    <LinearLayout
        android:id="@+id/name_text"
        app:layout_constraintBottom_toTopOf="@id/check_boxes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_text"
            android:inputType="text"/>
        <EditText
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/last_text"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/check_boxes"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specific_categories" />
    </LinearLayout>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_boxes" />
</androidx.constraintlayout.widget.ConstraintLayout>